# huggingface-secure-proxy

./: .dockerignore  .gitignore  README.md  Securepipe Llm Gateway Doc.txt  debug_cpp_extraction.py  debug_phone_detection.py  healthcheck.sh  render.yaml  requirements-dev.txt  requirements.txt  run.py  setup.sh
.github/workflows/: build.yml  docker-publish.yml  test-cloud.yml  test-local.yml  tests.yml
app/: config.py  main.py  security_engine.py
app/backend/: main.py  redis_service.py
app/frontend/: main.py
app/frontend/static/: index.html  script.js  style.css
app/security/: __init__.py  harmful_keywords.json  service.py
cpp/: CMakeLists.txt  SecurityAnalyzer.h
cpp/bindings/: python_bindings.cpp
cpp/config/: SecurityAnalyzerConfig.cmake.in
cpp/mlInterface/: CMakeLists.txt  MLInference.cpp  MLInference.h
cpp/securityAnalyzer/: CMakeLists.txt  SecurityAnalyzer.cpp  SecurityAnalyzer.h
cpp/tests/: CMakeLists.txt  test_security_analyzer.cpp
cpp/textProcessor/: CMakeLists.txt  TextProcessor.cpp  TextProcessor.h
docker/: docker-compose.prod.yml  docker-compose.yml  prometheus.yml
docker/dev/: Dockerfile  build_docker.sh  docker-compose.yml  generate-certs.sh  run_docker.sh
docker/production/: Dockerfile  Dockerfile.backend  Dockerfile.frontend  build_docker.sh  docker-compose.yml  prometheus.yml  run_docker.sh
scripts/: build_cpp.py
tests/: __init__.py  redis_test.py  test_api.py
